--- a/web/package.json
+++ b/web/package.json
@@ -19,8 +19,7 @@
         "diff": "^7.0.0",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
-        "react-markdown": "^10.1.0",
-        "react-syntax-highlighter": "^16.1.0",
+        "react-shiki": "^0.9.1",
         "react-textarea-autosize": "^8.5.9",
         "remark-gfm": "^4.0.1",
         "socket.io-client": "^4.8.1",
@@ -29,7 +28,6 @@
     "devDependencies": {
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
-        "@types/react-syntax-highlighter": "^15.5.13",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.49",
