feat: add web vibration api fallback for haptic feedback
Replace no-op browser haptic feedback with Web Vibration API support,
allowing haptic feedback when running outside Telegram Mini App. Also
remove stale react-syntax-highlighter type reference from tsconfig.

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -5,7 +5,7 @@
         "lib": ["ES2020", "ESNext", "ESNext.Disposable", "DOM", "DOM.Iterable"],
         "jsx": "react-jsx",
         "noEmit": true,
-        "types": ["vite/client", "react-syntax-highlighter"],
+        "types": ["vite/client"],
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
