feat: optimize web bundle with custom minimal Shiki highlighter
Replaces react-shiki with a custom minimal Shiki highlighter to significantly reduce bundle size. Only loads 29 common languages and 2 themes (github-light/dark), using the JavaScript RegExp engine instead of WASM.

- Reduced web bundle from 5.8MB to 2.5MB (57% reduction)
- Saves 622KB by avoiding WASM runtime
- Graceful fallback for unsupported languages
- Removed react-shiki dependency
- Added @shikijs/langs, @shikijs/themes, shiki, hast-util-to-jsx-runtime
- Added light mode CSS rules for syntax highlighting

--- a/web/package.json
+++ b/web/package.json
@@ -14,14 +14,17 @@
         "@assistant-ui/react-markdown": "^0.11.8",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-slot": "^1.2.0",
+        "@shikijs/langs": "^3.20.0",
+        "@shikijs/themes": "^3.20.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "diff": "^7.0.0",
+        "hast-util-to-jsx-runtime": "^2.3.6",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
-        "react-shiki": "^0.9.1",
         "react-textarea-autosize": "^8.5.9",
         "remark-gfm": "^4.0.1",
+        "shiki": "^3.20.0",
         "socket.io-client": "^4.8.1",
         "tailwind-merge": "^2.5.5"
     },
