--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,8 @@
         "@radix-ui/react-slot": "^1.2.0",
         "@shikijs/langs": "^3.20.0",
         "@shikijs/themes": "^3.20.0",
+        "@tanstack/react-query": "^5.71.10",
+        "@tanstack/react-query-devtools": "^5.71.10",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "diff": "^7.0.0",
