--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
         "@shikijs/themes": "^3.20.0",
         "@tanstack/react-query": "^5.71.10",
         "@tanstack/react-query-devtools": "^5.71.10",
+        "@tanstack/react-router": "^1.114.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "diff": "^7.0.0",
