feat(cli): refactor embedded assets with Bun-specific and stub implementations
Split embedded assets loading into runtime-specific variants using package.json imports field. Bun-compiled binaries use the full implementation with file assets, while stub fallback provides clear error for non-Bun runtimes.

--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi",
-  "version": "0.12.0-0",
+  "version": "0.12.0-1",
   "description": "Mobile and Web client for Claude Code and Codex",
   "author": "Kirill Dubovitskiy",
   "license": "MIT",
@@ -49,6 +49,12 @@
         "types": "./dist/codex/happyMcpStdioBridge.d.mts",
         "default": "./dist/codex/happyMcpStdioBridge.mjs"
       }
+    }
+  },
+  "imports": {
+    "#embedded-assets": {
+      "bun": "./src/runtime/embeddedAssets.bun.ts",
+      "default": "./src/runtime/embeddedAssets.stub.ts"
     }
   },
   "files": [
