--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
     "name": "hapi-server",
     "private": true,
     "version": "0.1.0",
-    "description": "Telegram Bot client for Happy - control Claude Code sessions",
+  "description": "Telegram Bot client for HAPI - control Claude Code sessions",
     "author": "Kirill Dubovitskiy",
     "license": "MIT",
     "type": "module",
