--- a/cli/package.json
+++ b/cli/package.json
@@ -105,6 +105,7 @@
   "devDependencies": {
     "@eslint/compat": "^1",
     "@types/node": ">=20",
+    "bun-types": "^1.3.5",
     "cross-env": "^10.1.0",
     "dotenv": "^16.6.1",
     "eslint": "^9",
