fix(cli): add stub embedded assets generation to build process

--- a/cli/package.json
+++ b/cli/package.json
@@ -67,7 +67,7 @@
   "scripts": {
     "why do we need to build before running tests / dev?": "We need the binary to be built so we run daemon commands which directly run the binary - we don't want them to go out of sync or have custom spawn logic depending how we started HAPI",
     "typecheck": "tsc --noEmit",
-    "build": "shx rm -rf dist && tsc --noEmit && pkgroll",
+    "build": "bun run scripts/write-embedded-assets-stub.ts && shx rm -rf dist && tsc --noEmit && pkgroll",
     "build:exe": "bun run scripts/build-executable.ts",
     "build:exe:all": "bun run scripts/build-executable.ts --all",
     "build:exe:allinone": "bun run scripts/build-executable.ts --with-web-assets",
