--- a/cli/package.json
+++ b/cli/package.json
@@ -13,43 +13,7 @@
     "directory": "cli"
   },
   "bin": {
-    "hapi": "./bin/happy.mjs",
-    "hapi-mcp": "./bin/happy-mcp.mjs"
-  },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.cts",
-  "exports": {
-    ".": {
-      "require": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      },
-      "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      }
-    },
-    "./lib": {
-      "require": {
-        "types": "./dist/lib.d.cts",
-        "default": "./dist/lib.cjs"
-      },
-      "import": {
-        "types": "./dist/lib.d.mts",
-        "default": "./dist/lib.mjs"
-      }
-    },
-    "./codex/happyMcpStdioBridge": {
-      "require": {
-        "types": "./dist/codex/happyMcpStdioBridge.d.cts",
-        "default": "./dist/codex/happyMcpStdioBridge.cjs"
-      },
-      "import": {
-        "types": "./dist/codex/happyMcpStdioBridge.d.mts",
-        "default": "./dist/codex/happyMcpStdioBridge.mjs"
-      }
-    }
+    "hapi": "./src/index.ts"
   },
   "imports": {
     "#embedded-assets": {
@@ -57,31 +21,17 @@
       "default": "./src/runtime/embeddedAssets.stub.ts"
     }
   },
-  "files": [
-    "dist",
-    "bin",
-    "scripts",
-    "tools",
-    "package.json"
-  ],
   "scripts": {
-    "why do we need to build before running tests / dev?": "We need the binary to be built so we run daemon commands which directly run the binary - we don't want them to go out of sync or have custom spawn logic depending how we started HAPI",
     "typecheck": "tsc --noEmit",
-    "build": "bun run scripts/write-embedded-assets-stub.ts && shx rm -rf dist && tsc --noEmit && pkgroll",
     "build:exe": "bun run scripts/build-executable.ts",
     "build:exe:all": "bun run scripts/build-executable.ts --all",
     "build:exe:allinone": "bun run scripts/build-executable.ts --with-web-assets",
     "build:exe:allinone:all": "bun run scripts/build-executable.ts --with-web-assets --all",
-    "test": "bun run build && tsx --env-file .env.integration-test node_modules/.bin/vitest run",
-    "test:win": "bun run build && vitest run",
-    "start": "bun run build && ./bin/happy.mjs",
-    "start:win": "bun run build && node ./bin/happy.mjs",
+    "test": "tsx --env-file .env.integration-test node_modules/.bin/vitest run",
+    "test:win": "vitest run",
     "dev": "tsx src/index.ts",
-    "dev:local-server": "bun run build && tsx --env-file .env.dev-local-server src/index.ts",
-    "dev:integration-test-env": "bun run build && tsx --env-file .env.integration-test src/index.ts",
-    "prepublishOnly": "bun run build && bun run test",
-    "release": "release-it",
-    "postinstall": "node scripts/unpack-tools.cjs"
+    "dev:local-server": "tsx --env-file .env.dev-local-server src/index.ts",
+    "dev:integration-test-env": "tsx --env-file .env.integration-test src/index.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.22.0",
@@ -110,8 +60,6 @@
     "dotenv": "^16.6.1",
     "eslint": "^9",
     "eslint-config-prettier": "^10",
-    "pkgroll": "^2.14.2",
-    "release-it": "^19.0.6",
     "shx": "^0.3.3",
     "ts-node": "^10",
     "tsx": "^4.20.6",
@@ -122,9 +70,6 @@
     "whatwg-url": "14.2.0",
     "parse-path": "7.0.3",
     "@types/parse-path": "7.0.3"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
   },
   "packageManager": "bun@1.3.4"
 }
