refactor(ui): extract switch controls logic into reusable hook and terminal restoration utility
Extracts duplicated exit/switch confirmation handling from CodexDisplay and RemoteModeDisplay into a custom useSwitchControls hook. Centralizes terminal state restoration (raw mode, keyboard protocol cleanup) into a restoreTerminalState utility function used across codex modules. Improves code reusability and maintainability.

--- a/cli/package.json
+++ b/cli/package.json
@@ -64,7 +64,8 @@
     "ts-node": "^10",
     "tsx": "^4.20.6",
     "typescript": "^5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "react-test-renderer": "^19.2.0"
   },
   "resolutions": {
     "whatwg-url": "14.2.0",
