feat: add Homebrew installation support for hapi CLI
- Update CI workflow to package release artifacts with correct naming (hapi-* prefix)
- Generate SHA256 checksums for all artifacts
- Auto-update homebrew-tap repository on release
- Add Installation section to README with Homebrew, npm, and binary options
- Simplify .release-it.json config as CI now handles release process
- Add update-homebrew-formula script to update formula in homebrew-tap
- Add release-artifacts directory to .gitignore

Users can now install via: brew install tiann/tap/hapi

--- a/cli/.gitignore
+++ b/cli/.gitignore
@@ -12,6 +12,7 @@ oclif.manifest.json
 
 # Build outputs
 /dist-exe/
+/release-artifacts/
 
 # Generated npm platform packages (created by prepare-npm-packages.ts)
 /npm/*/package.json
