refactor: remove eslint and tsx-related dependencies after bun migration
Removes dev dependencies no longer needed after migrating from tsx to bun as TypeScript runtime and removing linting toolchain. Moves workbox-window to web package dependencies where it's actually used.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     },
     "devDependencies": {
         "concurrently": "^9.2.1",
-        "vite-plugin-pwa": "^1.2.0",
-        "workbox-window": "^7.4.0"
+        "vite-plugin-pwa": "^1.2.0"
     }
 }
