--- a/web/package.json
+++ b/web/package.json
@@ -28,11 +28,11 @@
         "hast-util-to-jsx-runtime": "^2.3.6",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
-        "react-textarea-autosize": "^8.5.9",
         "remark-gfm": "^4.0.1",
         "shiki": "^3.20.0",
         "socket.io-client": "^4.8.1",
-        "tailwind-merge": "^2.5.5"
+        "tailwind-merge": "^2.5.5",
+        "workbox-window": "^7.4.0"
     },
     "devDependencies": {
         "@types/react": "^19.2.7",
