--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,9 @@
         "@assistant-ui/react-markdown": "^0.11.9",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-slot": "^1.2.4",
-        "@xterm/addon-fit": "^0.10.0",
-        "@xterm/addon-web-links": "^0.11.0",
-        "@xterm/xterm": "^5.5.0",
+        "@xterm/addon-fit": "^0.11.0",
+        "@xterm/addon-web-links": "^0.12.0",
+        "@xterm/xterm": "^6.0.0",
         "@shikijs/langs": "^3.20.0",
         "@shikijs/themes": "^3.20.0",
         "@tanstack/react-query": "^5.90.12",
@@ -24,24 +24,25 @@
         "@tanstack/react-router": "^1.143.6",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "diff": "^7.0.0",
+        "diff": "^8.0.2",
         "hast-util-to-jsx-runtime": "^2.3.6",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "remark-gfm": "^4.0.1",
         "shiki": "^3.20.0",
         "socket.io-client": "^4.8.3",
-        "tailwind-merge": "^2.5.5",
+        "tailwind-merge": "^3.4.0",
         "workbox-window": "^7.4.0"
     },
     "devDependencies": {
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
-        "@vitejs/plugin-react": "^4.3.4",
+        "@tailwindcss/postcss": "^4.1.18",
+        "@vitejs/plugin-react": "^5.1.2",
         "autoprefixer": "^10.4.23",
         "postcss": "^8.5.6",
-        "tailwindcss": "^3.4.15",
+        "tailwindcss": "^4.1.18",
         "typescript": "^5.9.3",
-        "vite": "^5.4.11"
+        "vite": "^7.3.0"
     }
 }
