--- a/cli/package.json
+++ b/cli/package.json
@@ -64,6 +64,7 @@
     "react": "^19.2.3",
     "socket.io-client": "^4.8.3",
     "tar": "^7.5.2",
+    "yaml": "^2.8.2",
     "zod": "^4.2.1"
   },
   "devDependencies": {
