fix: correct npm repository URL format in cli package
Use git+https://...git format to prevent npm publish warning about
auto-correction of repository URL field.

--- a/cli/package.json
+++ b/cli/package.json
@@ -9,7 +9,7 @@
   "bugs": "https://github.com/tiann/hapi/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tiann/hapi",
+    "url": "git+https://github.com/tiann/hapi.git",
     "directory": "cli"
   },
   "bin": {
