--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,10 @@
         "dev": "vite",
         "build": "vite build && cp dist/index.html dist/404.html",
         "typecheck": "tsc --noEmit",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --coverage"
     },
     "dependencies": {
         "@assistant-ui/react": "^0.11.53",
@@ -47,10 +50,14 @@
         "@types/react-dom": "^19.2.3",
         "@tailwindcss/postcss": "^4.1.18",
         "@vitejs/plugin-react": "^5.1.2",
+        "@vitest/coverage-v8": "^2.1.8",
+        "@vitest/ui": "^2.1.8",
         "autoprefixer": "^10.4.23",
+        "happy-dom": "^15.11.7",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.18",
         "typescript": "^5.9.3",
-        "vite": "^7.3.0"
+        "vite": "^7.3.0",
+        "vitest": "^2.1.8"
     }
 }
