feat: add QR code scan login
Allow new devices to log in by scanning a QR code displayed on the
login page. An already-authenticated device scans the QR, opens a
confirm page, and approves the login. The new device then receives
the access token and authenticates normally.

Backend:
- POST /api/qr: create QR session (5min TTL, one-time use)
- GET /api/qr/:id?s=secret: poll status
- POST /api/qr/:id/confirm: approve login (requires JWT)

Frontend:
- QrLogin component with QR code rendering and polling
- QR confirm page at /qr/:id for the scanning device
- Toggle between token login and QR login on LoginPrompt
- i18n strings for en and zh-CN

--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
         "@tanstack/react-query": "^5.90.12",
         "@tanstack/react-query-devtools": "^5.91.1",
         "@tanstack/react-router": "^1.143.6",
+        "@types/qrcode": "^1.5.6",
         "@xterm/addon-canvas": "^0.7.0",
         "@xterm/addon-fit": "^0.11.0",
         "@xterm/addon-web-links": "^0.12.0",
@@ -31,6 +32,7 @@
         "clsx": "^2.1.1",
         "diff": "^8.0.2",
         "hast-util-to-jsx-runtime": "^2.3.6",
+        "qrcode": "^1.5.4",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "remark-gfm": "^4.0.1",
