fix: resolve all 14 web package type errors
1. Add @testing-library/react to devDependencies for test files
2. Replace react-i18next imports with custom @/lib/use-translation hook
3. Add missing DialogFooter component to dialog.tsx
4. Fix translation function calls - remove invalid fallback strings
5. Fix type definitions for forkSession and reloadSession to match implementations
6. Add required enabled parameter to useMachines call

All errors were actual bugs that would cause runtime failures. These fixes
align implementations with their type signatures and use the correct custom
translation system instead of the external react-i18next library.

--- a/web/package.json
+++ b/web/package.json
@@ -46,6 +46,7 @@
         "workbox-window": "^7.4.0"
     },
     "devDependencies": {
+        "@testing-library/react": "^16.1.0",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
         "@tailwindcss/postcss": "^4.1.18",
