fix: embed version info at compile time using generated TypeScript
Replace runtime file loading of version.json with compile-time embedding
using a generated TypeScript file. This matches the simplicity of Go's
build-time variable injection.

Changes:
- Generate version.generated.ts instead of version.json for server
- Use static import instead of runtime file I/O
- Add --ts flag to get-version.ts script for TS output
- Update server build scripts to generate version.generated.ts

This ensures version info is always available in compiled binaries
regardless of working directory, with no fallbacks or error handling needed.

--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,14 @@
     "license": "AGPL-3.0-only",
     "type": "module",
     "scripts": {
+        "prepare:version": "mkdir -p dist && bun run ../scripts/get-version.ts --ts > src/version.generated.ts",
+        "prestart": "bun run prepare:version",
         "start": "bun run src/index.ts",
+        "predev": "bun run prepare:version",
         "dev": "bun --watch run src/index.ts",
         "test": "bun test",
         "typecheck": "tsc --noEmit",
-        "build": "mkdir -p dist && bun run ../scripts/get-version.ts > dist/version.json && bun build src/index.ts --outdir dist --target bun",
+        "build": "bun run prepare:version && bun build src/index.ts --outdir dist --target bun",
         "generate:embedded-web-assets": "bun run scripts/generate-embedded-web-assets.ts"
     },
     "dependencies": {
