--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,8 @@
     "license": "AGPL-3.0-only",
     "type": "module",
     "scripts": {
+        "prepare:version": "bun run ../scripts/get-version.ts --ts > src/version.generated.ts",
+        "prebuild": "bun run prepare:version",
         "dev": "vite",
         "build": "vite build && cp dist/index.html dist/404.html",
         "typecheck": "tsc --noEmit",
