feat: add auto-reload mechanism for server binary updates
- Create shared autoReload utility in @hapi/protocol package
- Server now detects binary updates via mtime every 60 seconds
- Gracefully shuts down and restarts when new binary is detected
- Fix build script to generate version.generated.ts files
- Update .gitignore to exclude auto-generated version files

This enables hot-reload for the server similar to the runner,
eliminating the need for manual restarts after deployments.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "concurrently \"bun run dev:server\" \"bun run dev:web\" --kill-others-on-exit",
         "build": "bun run build:cli && bun run build:server && bun run build:web",
         "build:cli": "cd cli && bun run build",
-        "build:single-exe": "mkdir -p server/dist && bun run scripts/get-version.ts > server/dist/version.json && bun run download:tunwg && bun run build:web && (cd server && bun run generate:embedded-web-assets) && (cd cli && bun run build:exe:allinone)",
+        "build:single-exe": "mkdir -p server/dist && bun run scripts/get-version.ts > server/dist/version.json && bun run scripts/get-version.ts --ts > server/src/version.generated.ts && bun run scripts/get-version.ts --ts > cli/src/version.generated.ts && bun run download:tunwg && bun run build:web && (cd server && bun run generate:embedded-web-assets) && (cd cli && bun run build:exe:allinone)",
         "build:single-exe:all": "bun run download:tunwg && bun run build:web && (cd server && bun run generate:embedded-web-assets) && (cd cli && bun run build:exe:allinone:all)",
         "download:tunwg": "bun run server/scripts/download-tunwg.ts",
         "build:server": "cd server && bun run build",
