--- a/.github/workflows/hub-go.yml
+++ b/.github/workflows/hub-go.yml
@@ -22,8 +22,8 @@ jobs:
                   go-version: "1.22"
                   cache-dependency-path: hub_go/go.sum
             - name: Vet
-              run: go vet -mod=vendor ./...
+              run: go vet ./...
             - name: Test
-              run: go test -mod=vendor -race ./internal/... -count=1
+              run: go test -race ./internal/... -count=1
             - name: Build
-              run: go build -mod=vendor ./...
+              run: go build ./...
